# wayland

./: meson.build  meson_options.txt
cursor/: meson.build
doc/: meson.build
doc/doxygen/: .gitignore  gen-doxygen.py  meson.build
doc/doxygen/xml/: meson.build
doc/man/: meson.build
egl/: meson.build
src/: meson.build
tests/: meson.build  test-helpers.c
