option('libraries',
  description: 'Compile Wayland libraries',
  type: 'boolean',
  value: 'true')
option('host_scanner',
  description: 'Use wayland-scanner from PATH during build',
  type: 'boolean',
  value: 'false')
option('documentation',
  description: 'Build the documentation (requires Doxygen)',
  type: 'boolean',
  value: 'true')
option('dtd_validation',
  description: 'Validate the protocol DTD (requires libxml2)',
  type: 'boolean',
  value: 'true')
option('icon_directory',
  description: 'Location used to look for cursors (defaults to ${datadir}/icons if unset)',
  type: 'string',
  value: '')
